tests/errors/intrinsics7.f90
program intrinsics7
    print *, hypot(1.0, 2.7_8)
end program